create function update

--- a/terceiro_modulo/src/templates/_menu.html
+++ b/terceiro_modulo/src/templates/_menu.html
@@ -1,5 +1,5 @@
 {{define "_menu"}}
 <nav class="navbar navbar-light bg-light mb-4">
-  <a class="navbar-brand" href="/">Lojinha maneira</a>
+  <h2> <strong> <a class="navbar-brand" href="/">Lojinha Maneira</a> </strong> </h2>
 </nav>
 {{end}}
