--- a/terceiro_modulo/src/templates/_head.html
+++ b/terceiro_modulo/src/templates/_head.html
@@ -16,6 +16,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <title>Alura loja</title>
+    <title>Lojinha Maneira</title>
   </head>
 {{ end}}
